// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-oqlr0u-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1g7hsps-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-s4ngmg-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-juk7pb-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-dqssxn-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-oqlr0u-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1g7hsps-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1wa2311-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-r7wjxg-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-vre4t7-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-oqlr0u-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1g7hsps-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-nn84a9-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-eh9tyy-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-1kamn6n-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-oqlr0u-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1g7hsps-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-nn84a9-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-7xr15e-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-6igxcm-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;

exports[`EmptyState ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="css-2rfp0i"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-oqlr0u-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1g7hsps-MuiGrid2-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-nfwlmt-MuiTypography-root"
          style="--Typography-textAlign: center;"
        >
          Title
        </h6>
      </div>
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1b475d1-MuiTypography-root"
      style="--Typography-textAlign: center;"
    >
      Description
    </p>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-h9qa37-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Button Title
    </button>
  </div>
</div>
`;
